Add tooltip column to nodes

--- a/use-cases/class-visualization.ipynb
+++ b/use-cases/class-visualization.ipynb
@@ -3518,14 +3518,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 102,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-29T12:35:35.190492Z",
-     "iopub.status.busy": "2021-12-29T12:35:35.190014Z",
-     "iopub.status.idle": "2021-12-29T12:47:26.823404Z",
-     "shell.execute_reply": "2021-12-29T12:47:26.822416Z",
-     "shell.execute_reply.started": "2021-12-29T12:35:35.190459Z"
+     "iopub.execute_input": "2021-12-29T22:25:39.800585Z",
+     "iopub.status.busy": "2021-12-29T22:25:39.800016Z",
+     "iopub.status.idle": "2021-12-29T22:37:48.801082Z",
+     "shell.execute_reply": "2021-12-29T22:37:48.799856Z",
+     "shell.execute_reply.started": "2021-12-29T22:25:39.800555Z"
     },
     "tags": []
    },
@@ -3533,20 +3533,88 @@
    "source": [
     "kgtk(\"\"\"\n",
     "    cat --mode NONE -i $TEMP/graph.high.node.tsv.gz -i $TEMP/graph.low.node.tsv.gz\n",
+    "    -o $TEMP/class-visualization.node.tsv.gz\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add a tooltip with meaningful information"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-12-29T22:37:58.184417Z",
+     "iopub.status.busy": "2021-12-29T22:37:58.184193Z",
+     "iopub.status.idle": "2021-12-29T22:46:05.697572Z",
+     "shell.execute_reply": "2021-12-29T22:46:05.696826Z",
+     "shell.execute_reply.started": "2021-12-29T22:37:58.184392Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "node1\tgraph\tinstance_count\tnode_type\tlabel\n",
+      "Q10267817\tQ1002195\t1\tmany_subclasses\t'autosomal recessive disease'@en\n",
+      "Q10267817\tQ100936194\t1\tmany_subclasses\t'autosomal recessive disease'@en\n",
+      "Q10267817\tQ101534204\t1\tmany_subclasses\t'autosomal recessive disease'@en\n",
+      "Q10267817\tQ101896\t1\tmany_subclasses\t'autosomal recessive disease'@en\n",
+      "Q10267817\tQ102186811\t1\tmany_subclasses\t'autosomal recessive disease'@en\n",
+      "Q10267817\tQ102186866\t1\tmany_subclasses\t'autosomal recessive disease'@en\n",
+      "Q10267817\tQ102187030\t1\tmany_subclasses\t'autosomal recessive disease'@en\n",
+      "Q10267817\tQ102187396\t1\tmany_subclasses\t'autosomal recessive disease'@en\n",
+      "Q10267817\tQ102187456\t1\tmany_subclasses\t'autosomal recessive disease'@en\n",
+      "Q10267817\tQ1022312\t1\tmany_subclasses\t'autosomal recessive disease'@en\n"
+     ]
+    }
+   ],
+   "source": [
+    "!kgtk    query -i $TEMP/class-visualization.node.tsv.gz  --limit 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-12-29T23:11:35.007965Z",
+     "iopub.status.busy": "2021-12-29T23:11:35.007738Z",
+     "iopub.status.idle": "2021-12-29T23:29:28.708083Z",
+     "shell.execute_reply": "2021-12-29T23:29:28.706877Z",
+     "shell.execute_reply.started": "2021-12-29T23:11:35.007940Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "kgtk(\"\"\"\n",
+    "    query -i $TEMP/class-visualization.node.tsv.gz\n",
+    "        --match '(node)-[{graph: g, instance_count: ic, node_type: nt, label: l}]->()'\n",
+    "        --return 'distinct\n",
+    "            node as node1, g as graph, ic as instance_count, nt as node_type, l as label,\n",
+    "            printf(\"%s (%s)<BR/>instance count: %s<BR/>node type: %s\", kgtk_lqstring_text(l), node, cast(ic, int), nt) as tooltip'\n",
     "    -o $OUT/class-visualization.node.tsv.gz\n",
     "\"\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 119,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-29T12:47:26.825263Z",
-     "iopub.status.busy": "2021-12-29T12:47:26.824979Z",
-     "iopub.status.idle": "2021-12-29T12:47:30.017339Z",
-     "shell.execute_reply": "2021-12-29T12:47:30.016746Z",
-     "shell.execute_reply.started": "2021-12-29T12:47:26.825229Z"
+     "iopub.execute_input": "2021-12-29T23:29:28.710894Z",
+     "iopub.status.busy": "2021-12-29T23:29:28.710531Z",
+     "iopub.status.idle": "2021-12-29T23:29:32.374756Z",
+     "shell.execute_reply": "2021-12-29T23:29:32.374008Z",
+     "shell.execute_reply.started": "2021-12-29T23:29:28.710866Z"
     },
     "tags": []
    },
@@ -3577,6 +3645,7 @@
        "      <th>instance_count</th>\n",
        "      <th>node_type</th>\n",
        "      <th>label</th>\n",
+       "      <th>tooltip</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -3587,6 +3656,7 @@
        "      <td>1</td>\n",
        "      <td>many_subclasses</td>\n",
        "      <td>'autosomal recessive disease'@en</td>\n",
+       "      <td>autosomal recessive disease (Q10267817)&lt;BR/&gt;in...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -3595,6 +3665,7 @@
        "      <td>1</td>\n",
        "      <td>many_subclasses</td>\n",
        "      <td>'autosomal recessive disease'@en</td>\n",
+       "      <td>autosomal recessive disease (Q10267817)&lt;BR/&gt;in...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -3603,6 +3674,7 @@
        "      <td>1</td>\n",
        "      <td>many_subclasses</td>\n",
        "      <td>'autosomal recessive disease'@en</td>\n",
+       "      <td>autosomal recessive disease (Q10267817)&lt;BR/&gt;in...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -3611,6 +3683,7 @@
        "      <td>1</td>\n",
        "      <td>many_subclasses</td>\n",
        "      <td>'autosomal recessive disease'@en</td>\n",
+       "      <td>autosomal recessive disease (Q10267817)&lt;BR/&gt;in...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -3619,6 +3692,7 @@
        "      <td>1</td>\n",
        "      <td>many_subclasses</td>\n",
        "      <td>'autosomal recessive disease'@en</td>\n",
+       "      <td>autosomal recessive disease (Q10267817)&lt;BR/&gt;in...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3632,15 +3706,22 @@
        "3  Q10267817     Q101896               1  many_subclasses   \n",
        "4  Q10267817  Q102186811               1  many_subclasses   \n",
        "\n",
-       "                              label  \n",
-       "0  'autosomal recessive disease'@en  \n",
-       "1  'autosomal recessive disease'@en  \n",
-       "2  'autosomal recessive disease'@en  \n",
-       "3  'autosomal recessive disease'@en  \n",
-       "4  'autosomal recessive disease'@en  "
+       "                              label  \\\n",
+       "0  'autosomal recessive disease'@en   \n",
+       "1  'autosomal recessive disease'@en   \n",
+       "2  'autosomal recessive disease'@en   \n",
+       "3  'autosomal recessive disease'@en   \n",
+       "4  'autosomal recessive disease'@en   \n",
+       "\n",
+       "                                             tooltip  \n",
+       "0  autosomal recessive disease (Q10267817)<BR/>in...  \n",
+       "1  autosomal recessive disease (Q10267817)<BR/>in...  \n",
+       "2  autosomal recessive disease (Q10267817)<BR/>in...  \n",
+       "3  autosomal recessive disease (Q10267817)<BR/>in...  \n",
+       "4  autosomal recessive disease (Q10267817)<BR/>in...  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3658,14 +3739,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 120,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-29T12:47:30.018638Z",
-     "iopub.status.busy": "2021-12-29T12:47:30.018345Z",
-     "iopub.status.idle": "2021-12-29T12:58:48.632728Z",
-     "shell.execute_reply": "2021-12-29T12:58:48.631375Z",
-     "shell.execute_reply.started": "2021-12-29T12:47:30.018613Z"
+     "iopub.execute_input": "2021-12-29T23:29:32.376421Z",
+     "iopub.status.busy": "2021-12-29T23:29:32.376103Z",
+     "iopub.status.idle": "2021-12-29T23:57:03.396023Z",
+     "shell.execute_reply": "2021-12-29T23:57:03.395236Z",
+     "shell.execute_reply.started": "2021-12-29T23:29:32.376397Z"
     },
     "tags": []
    },
@@ -3674,10 +3755,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "node1\tgraph\tinstance_count\tnode_type\tlabel\n",
-      "Q10267817\tQ1002195\t1\tmany_subclasses\t'autosomal recessive disease'@en\n",
-      "Q10267817\tQ100936194\t1\tmany_subclasses\t'autosomal recessive disease'@en\n",
-      "Q10267817\tQ101534204\t1\tmany_subclasses\t'autosomal recessive disease'@en\n"
+      "node1\tgraph\tinstance_count\tnode_type\tlabel\ttooltip\n",
+      "Q10267817\tQ1002195\t1\tmany_subclasses\t'autosomal recessive disease'@en\tautosomal recessive disease (Q10267817)<BR/>instance count: 1<BR/>node type: many_subclasses\n",
+      "Q10267817\tQ100936194\t1\tmany_subclasses\t'autosomal recessive disease'@en\tautosomal recessive disease (Q10267817)<BR/>instance count: 1<BR/>node type: many_subclasses\n",
+      "Q10267817\tQ101534204\t1\tmany_subclasses\t'autosomal recessive disease'@en\tautosomal recessive disease (Q10267817)<BR/>instance count: 1<BR/>node type: many_subclasses\n"
      ]
     }
    ],
@@ -3980,14 +4061,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 121,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-29T14:16:00.949097Z",
-     "iopub.status.busy": "2021-12-29T14:16:00.948685Z",
-     "iopub.status.idle": "2021-12-29T14:17:24.933433Z",
-     "shell.execute_reply": "2021-12-29T14:17:24.932467Z",
-     "shell.execute_reply.started": "2021-12-29T14:16:00.949066Z"
+     "iopub.execute_input": "2021-12-30T00:07:00.871030Z",
+     "iopub.status.busy": "2021-12-30T00:07:00.870751Z",
+     "iopub.status.idle": "2021-12-30T00:11:52.583706Z",
+     "shell.execute_reply": "2021-12-30T00:11:52.582627Z",
+     "shell.execute_reply.started": "2021-12-30T00:07:00.871001Z"
     },
     "tags": []
    },
