--- a/tutorial/07-kg-constraint-validation.ipynb
+++ b/tutorial/07-kg-constraint-validation.ipynb
@@ -58,14 +58,15 @@
    "source": [
     "# Parameters\n",
     "\n",
-    "kgtk_path = \"/kgtk\"\n",
+    "#kgtk_path = \"/kgtk\"\n",
     "\n",
-    "tutorial_deployment_path = \"/out/datasets\"\n",
-    "project_deployment_path = tutorial_deployment_path + \"/arnold-profiled\"\n",
+    "current_path = os.getcwd()\n",
+    "\n",
+    "tutorial_deployment_path = current_path[0:len(current_path)-9] + '/datasets'\n",
     "\n",
     "# Folder on local machine where to create the output and temporary folders\n",
-    "input_path = \"/out/datasets/arnold\"\n",
-    "output_path = \"/out/projects\"\n",
+    "input_path = tutorial_deployment_path + \"/arnold\"\n",
+    "output_path = \"/tmp/projects\"\n",
     "project_name = \"tutorial-constraints\""
    ]
   },
@@ -79,10 +80,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "User home: /home/jovyan\n",
-      "Current dir: /out/tutorial\n",
-      "KGTK dir: /kgtk\n",
-      "Use-cases dir: /kgtk/use-cases\n"
+      "User home: /Users/grantxie\n",
+      "Current dir: /Users/grantxie/Downloads/kgtk-notebooks/tutorial\n",
+      "KGTK dir: /Users/grantxie/Downloads/kgtk-notebooks\n",
+      "Use-cases dir: /Users/grantxie/Downloads/kgtk-notebooks/use-cases\n"
      ]
     }
    ],
@@ -109,7 +110,7 @@
     "    \"pagerank_directed\",\n",
     "    \"pagerank_undirected\"\n",
     "]\n",
-    "ck = ConfigureKGTK(files, kgtk_path=kgtk_path)\n",
+    "ck = ConfigureKGTK(files)\n",
     "ck.configure_kgtk(input_graph_path=input_path,\n",
     "                  output_path=output_path,\n",
     "                  project_name=project_name)"
@@ -125,34 +126,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TEMP: /out/projects/tutorial-constraints/temp.tutorial-constraints\n",
-      "kypher: kgtk query --graph-cache /out/projects/tutorial-constraints/temp.tutorial-constraints/wikidata.sqlite3.db\n",
-      "STORE: /out/projects/tutorial-constraints/temp.tutorial-constraints/wikidata.sqlite3.db\n",
+      "OUT: /tmp/projects/tutorial-constraints\n",
+      "GRAPH: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold\n",
+      "kypher: kgtk query --graph-cache /tmp/projects/tutorial-constraints/temp.tutorial-constraints/wikidata.sqlite3.db\n",
+      "USE_CASES_DIR: /Users/grantxie/Downloads/kgtk-notebooks/use-cases\n",
       "kgtk: kgtk\n",
-      "EXAMPLES_DIR: /kgtk/examples\n",
-      "USE_CASES_DIR: /kgtk/use-cases\n",
-      "OUT: /out/projects/tutorial-constraints\n",
-      "GRAPH: /out/datasets/arnold\n",
-      "all: /out/datasets/arnold/all.tsv.gz\n",
-      "label: /out/datasets/arnold/labels.en.tsv.gz\n",
-      "alias: /out/datasets/arnold/aliases.en.tsv.gz\n",
-      "description: /out/datasets/arnold/descriptions.en.tsv.gz\n",
-      "external_id: /out/datasets/arnold/claims.external-id.tsv.gz\n",
-      "monolingualtext: /out/datasets/arnold/claims.monolingualtext.tsv.gz\n",
-      "quantity: /out/datasets/arnold/claims.quantity.tsv.gz\n",
-      "string: /out/datasets/arnold/claims.string.tsv.gz\n",
-      "time: /out/datasets/arnold/claims.time.tsv.gz\n",
-      "item: /out/datasets/arnold/claims.wikibase-item.tsv.gz\n",
-      "wikibase_property: /out/datasets/arnold/claims.wikibase-property.tsv.gz\n",
-      "qualifiers: /out/datasets/arnold/qualifiers.tsv.gz\n",
-      "datatypes: /out/datasets/arnold/metadata.property.datatypes.tsv.gz\n",
-      "p279: /out/datasets/arnold/derived.P279.tsv.gz\n",
-      "p279star: /out/datasets/arnold/derived.P279star.tsv.gz\n",
-      "p31: /out/datasets/arnold/derived.P31.tsv.gz\n",
-      "in_degree: /out/datasets/arnold/metadata.in_degree.tsv.gz\n",
-      "out_degree: /out/datasets/arnold/metadata.out_degree.tsv.gz\n",
-      "pagerank_directed: /out/datasets/arnold/metadata.pagerank.directed.tsv.gz\n",
-      "pagerank_undirected: /out/datasets/arnold/metadata.pagerank.undirected.tsv.gz\n"
+      "KGTK_OPTION_DEBUG: false\n",
+      "STORE: /tmp/projects/tutorial-constraints/temp.tutorial-constraints/wikidata.sqlite3.db\n",
+      "EXAMPLES_DIR: /Users/grantxie/Downloads/kgtk-notebooks/examples\n",
+      "KGTK_GRAPH_CACHE: /tmp/projects/tutorial-constraints/temp.tutorial-constraints/wikidata.sqlite3.db\n",
+      "TEMP: /tmp/projects/tutorial-constraints/temp.tutorial-constraints\n",
+      "KGTK_LABEL_FILE: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/labels.en.tsv.gz\n",
+      "all: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/all.tsv.gz\n",
+      "label: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/labels.en.tsv.gz\n",
+      "alias: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/aliases.en.tsv.gz\n",
+      "description: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/descriptions.en.tsv.gz\n",
+      "external_id: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/claims.external-id.tsv.gz\n",
+      "monolingualtext: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/claims.monolingualtext.tsv.gz\n",
+      "quantity: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/claims.quantity.tsv.gz\n",
+      "string: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/claims.string.tsv.gz\n",
+      "time: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/claims.time.tsv.gz\n",
+      "item: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/claims.wikibase-item.tsv.gz\n",
+      "wikibase_property: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/claims.wikibase-property.tsv.gz\n",
+      "qualifiers: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/qualifiers.tsv.gz\n",
+      "datatypes: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/metadata.property.datatypes.tsv.gz\n",
+      "p279: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/derived.P279.tsv.gz\n",
+      "p279star: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/derived.P279star.tsv.gz\n",
+      "p31: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/derived.P31.tsv.gz\n",
+      "in_degree: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/metadata.in_degree.tsv.gz\n",
+      "out_degree: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/metadata.out_degree.tsv.gz\n",
+      "pagerank_directed: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/metadata.pagerank.directed.tsv.gz\n",
+      "pagerank_undirected: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/metadata.pagerank.undirected.tsv.gz\n"
      ]
     }
    ],
@@ -180,13 +184,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kgtk query --graph-cache /out/projects/tutorial-constraints/temp.tutorial-constraints/wikidata.sqlite3.db -i \"/out/datasets/arnold/all.tsv.gz\" --as all  -i \"/out/datasets/arnold/labels.en.tsv.gz\" --as label  -i \"/out/datasets/arnold/aliases.en.tsv.gz\" --as alias  -i \"/out/datasets/arnold/descriptions.en.tsv.gz\" --as description  -i \"/out/datasets/arnold/claims.external-id.tsv.gz\" --as external_id  -i \"/out/datasets/arnold/claims.monolingualtext.tsv.gz\" --as monolingualtext  -i \"/out/datasets/arnold/claims.quantity.tsv.gz\" --as quantity  -i \"/out/datasets/arnold/claims.string.tsv.gz\" --as string  -i \"/out/datasets/arnold/claims.time.tsv.gz\" --as time  -i \"/out/datasets/arnold/claims.wikibase-item.tsv.gz\" --as item  -i \"/out/datasets/arnold/claims.wikibase-property.tsv.gz\" --as wikibase_property  -i \"/out/datasets/arnold/qualifiers.tsv.gz\" --as qualifiers  -i \"/out/datasets/arnold/metadata.property.datatypes.tsv.gz\" --as datatypes  -i \"/out/datasets/arnold/derived.P279.tsv.gz\" --as p279  -i \"/out/datasets/arnold/derived.P279star.tsv.gz\" --as p279star  -i \"/out/datasets/arnold/derived.P31.tsv.gz\" --as p31  -i \"/out/datasets/arnold/metadata.in_degree.tsv.gz\" --as in_degree  -i \"/out/datasets/arnold/metadata.out_degree.tsv.gz\" --as out_degree  -i \"/out/datasets/arnold/metadata.pagerank.directed.tsv.gz\" --as pagerank_directed  -i \"/out/datasets/arnold/metadata.pagerank.undirected.tsv.gz\" --as pagerank_undirected  --limit 3\n",
+      "kgtk query --graph-cache /tmp/projects/tutorial-constraints/temp.tutorial-constraints/wikidata.sqlite3.db -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/all.tsv.gz\" --as all  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/labels.en.tsv.gz\" --as label  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/aliases.en.tsv.gz\" --as alias  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/descriptions.en.tsv.gz\" --as description  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/claims.external-id.tsv.gz\" --as external_id  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/claims.monolingualtext.tsv.gz\" --as monolingualtext  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/claims.quantity.tsv.gz\" --as quantity  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/claims.string.tsv.gz\" --as string  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/claims.time.tsv.gz\" --as time  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/claims.wikibase-item.tsv.gz\" --as item  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/claims.wikibase-property.tsv.gz\" --as wikibase_property  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/qualifiers.tsv.gz\" --as qualifiers  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/metadata.property.datatypes.tsv.gz\" --as datatypes  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/derived.P279.tsv.gz\" --as p279  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/derived.P279star.tsv.gz\" --as p279star  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/derived.P31.tsv.gz\" --as p31  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/metadata.in_degree.tsv.gz\" --as in_degree  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/metadata.out_degree.tsv.gz\" --as out_degree  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/metadata.pagerank.directed.tsv.gz\" --as pagerank_directed  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold/metadata.pagerank.undirected.tsv.gz\" --as pagerank_undirected  --limit 3\n",
       "node1\tlabel\tnode2\tid\tnode2;wikidatatype\n",
       "P10\talias\t'gif'@en\tP10-alias-en-282226-0\t\n",
       "P10\talias\t'animation'@en\tP10-alias-en-2f86d8-0\t\n",
       "P10\talias\t'media'@en\tP10-alias-en-c1427e-0\t\n",
-      "CPU times: user 8.27 ms, sys: 374 µs, total: 8.64 ms\n",
-      "Wall time: 8.6 s\n"
+      "CPU times: user 5.61 ms, sys: 7.49 ms, total: 13.1 ms\n",
+      "Wall time: 31 s\n"
      ]
     }
    ],
@@ -213,8 +217,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 8.76 ms, sys: 9.68 ms, total: 18.4 ms\n",
-      "Wall time: 2.82 s\n"
+      "CPU times: user 9.19 ms, sys: 10.8 ms, total: 20 ms\n",
+      "Wall time: 6.95 s\n"
      ]
     },
     {
@@ -427,8 +431,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 9.84 ms, sys: 9.52 ms, total: 19.4 ms\n",
-      "Wall time: 4.64 s\n"
+      "CPU times: user 9.22 ms, sys: 9.85 ms, total: 19.1 ms\n",
+      "Wall time: 6.9 s\n"
      ]
     },
     {
@@ -1031,8 +1035,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4.41 ms, sys: 4.47 ms, total: 8.88 ms\n",
-      "Wall time: 1.25 s\n"
+      "CPU times: user 5.1 ms, sys: 7.81 ms, total: 12.9 ms\n",
+      "Wall time: 2.17 s\n"
      ]
     }
    ],
@@ -1423,6 +1427,22 @@
     "\n",
     "**Note that the graph we are handling is an incomplete subset of Wikidata, and part of the taxonomy has not been imported. Thus some of the elements of the list may be correct**"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83efb730-8330-4d33-90fd-054de800d2dd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b51e9d7-06e1-4a6a-a4e9-58a15a8f8888",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1441,7 +1461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
