--- a/tutorial/04-kg-enrichment-with-csv.ipynb
+++ b/tutorial/04-kg-enrichment-with-csv.ipynb
@@ -52,16 +52,20 @@
    "source": [
     "# Parameters\n",
     "\n",
-    "kgtk_path = \"/Users/pedroszekely/Documents/GitHub/kgtk\"\n",
+    "#kgtk_path = \"/Users/pedroszekely/Documents/GitHub/kgtk\"\n",
     "\n",
-    "tutorial_deployment_path = \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets\"\n",
+    "current_path = os.getcwd()\n",
+    "\n",
+    "tutorial_deployment_path = current_path[0:len(current_path)-9] + '/datasets'\n",
     "project_deployment_path = tutorial_deployment_path + \"/arnold-augmented\"\n",
+    "\n",
+    "imdb_path = tutorial_deployment_path + '/imdb'\n",
     "\n",
     "# Folder on local machine where to create the output and temporary folders\n",
     "# input_path = \"/Volumes/saggu-ssd/kgtk-tutorial-files/datasets/arnold-profiled\"\n",
-    "input_path = \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled\"\n",
+    "input_path = tutorial_deployment_path + '/arnold-profiled'\n",
     "\n",
-    "output_path = \"/Users/pedroszekely/Downloads/kypher/projects\"\n",
+    "output_path = \"/tmp/projects\"\n",
     "project_name = \"tutorial-augment\""
    ]
   },
@@ -81,10 +85,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "User home: /Users/pedroszekely\n",
-      "Current dir: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/tutorial\n",
-      "KGTK dir: /Users/pedroszekely/Documents/GitHub/kgtk\n",
-      "Use-cases dir: /Users/pedroszekely/Documents/GitHub/kgtk/use-cases\n"
+      "User home: /Users/grantxie\n",
+      "Current dir: /Users/grantxie/Downloads/kgtk-notebooks/tutorial\n",
+      "KGTK dir: /Users/grantxie/Downloads/kgtk-notebooks\n",
+      "Use-cases dir: /Users/grantxie/Downloads/kgtk-notebooks/use-cases\n"
      ]
     }
    ],
@@ -111,10 +115,11 @@
     "    \"pagerank_directed\",\n",
     "    \"pagerank_undirected\"\n",
     "]\n",
-    "ck = ConfigureKGTK(files, kgtk_path=kgtk_path)\n",
+    "\n",
+    "ck = ConfigureKGTK(files)\n",
     "ck.configure_kgtk(input_graph_path=input_path,\n",
     "                  output_path=output_path,\n",
-    "                  project_name=project_name)"
+    "                  project_name=project_name)\n"
    ]
   },
   {
@@ -126,37 +131,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kgtk: kgtk\n",
-      "kypher: kgtk query --graph-cache /Users/pedroszekely/Downloads/kypher/projects/tutorial-augment/temp.tutorial-augment/wikidata.sqlite3.db\n",
-      "USE_CASES_DIR: /Users/pedroszekely/Documents/GitHub/kgtk/use-cases\n",
-      "KGTK_GRAPH_CACHE: /Users/pedroszekely/Downloads/kypher/projects/tutorial-augment/temp.tutorial-augment/wikidata.sqlite3.db\n",
-      "KGTK_LABEL_FILE: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/labels.en.tsv.gz\n",
-      "STORE: /Users/pedroszekely/Downloads/kypher/projects/tutorial-augment/temp.tutorial-augment/wikidata.sqlite3.db\n",
       "KGTK_OPTION_DEBUG: false\n",
-      "OUT: /Users/pedroszekely/Downloads/kypher/projects/tutorial-augment\n",
-      "EXAMPLES_DIR: /Users/pedroszekely/Documents/GitHub/kgtk/examples\n",
-      "GRAPH: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled\n",
-      "TEMP: /Users/pedroszekely/Downloads/kypher/projects/tutorial-augment/temp.tutorial-augment\n",
-      "all: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/all.tsv.gz\n",
-      "label: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/labels.en.tsv.gz\n",
-      "alias: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/aliases.en.tsv.gz\n",
-      "description: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/descriptions.en.tsv.gz\n",
-      "external_id: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/claims.external-id.tsv.gz\n",
-      "monolingualtext: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/claims.monolingualtext.tsv.gz\n",
-      "quantity: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/claims.quantity.tsv.gz\n",
-      "string: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/claims.string.tsv.gz\n",
-      "time: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/claims.time.tsv.gz\n",
-      "item: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/claims.wikibase-item.tsv.gz\n",
-      "wikibase_property: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/claims.wikibase-property.tsv.gz\n",
-      "qualifiers: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/qualifiers.tsv.gz\n",
-      "datatypes: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/metadata.property.datatypes.tsv.gz\n",
-      "p279: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/derived.P279.tsv.gz\n",
-      "p279star: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/derived.P279star.tsv.gz\n",
-      "p31: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/derived.P31.tsv.gz\n",
-      "in_degree: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/metadata.in_degree.tsv.gz\n",
-      "out_degree: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/metadata.out_degree.tsv.gz\n",
-      "pagerank_directed: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/metadata.pagerank.directed.tsv.gz\n",
-      "pagerank_undirected: /Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/metadata.pagerank.undirected.tsv.gz\n"
+      "KGTK_LABEL_FILE: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/labels.en.tsv.gz\n",
+      "GRAPH: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled\n",
+      "EXAMPLES_DIR: /Users/grantxie/Downloads/kgtk-notebooks/examples\n",
+      "USE_CASES_DIR: /Users/grantxie/Downloads/kgtk-notebooks/use-cases\n",
+      "KGTK_GRAPH_CACHE: /tmp/projects/tutorial-augment/temp.tutorial-augment/wikidata.sqlite3.db\n",
+      "STORE: /tmp/projects/tutorial-augment/temp.tutorial-augment/wikidata.sqlite3.db\n",
+      "kgtk: kgtk\n",
+      "kypher: kgtk query --graph-cache /tmp/projects/tutorial-augment/temp.tutorial-augment/wikidata.sqlite3.db\n",
+      "OUT: /tmp/projects/tutorial-augment\n",
+      "TEMP: /tmp/projects/tutorial-augment/temp.tutorial-augment\n",
+      "all: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/all.tsv.gz\n",
+      "label: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/labels.en.tsv.gz\n",
+      "alias: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/aliases.en.tsv.gz\n",
+      "description: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/descriptions.en.tsv.gz\n",
+      "external_id: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/claims.external-id.tsv.gz\n",
+      "monolingualtext: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/claims.monolingualtext.tsv.gz\n",
+      "quantity: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/claims.quantity.tsv.gz\n",
+      "string: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/claims.string.tsv.gz\n",
+      "time: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/claims.time.tsv.gz\n",
+      "item: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/claims.wikibase-item.tsv.gz\n",
+      "wikibase_property: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/claims.wikibase-property.tsv.gz\n",
+      "qualifiers: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/qualifiers.tsv.gz\n",
+      "datatypes: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/metadata.property.datatypes.tsv.gz\n",
+      "p279: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/derived.P279.tsv.gz\n",
+      "p279star: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/derived.P279star.tsv.gz\n",
+      "p31: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/derived.P31.tsv.gz\n",
+      "in_degree: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/metadata.in_degree.tsv.gz\n",
+      "out_degree: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/metadata.out_degree.tsv.gz\n",
+      "pagerank_directed: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/metadata.pagerank.directed.tsv.gz\n",
+      "pagerank_undirected: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/metadata.pagerank.undirected.tsv.gz\n"
      ]
     }
    ],
@@ -196,13 +201,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kgtk query --graph-cache /Users/pedroszekely/Downloads/kypher/projects/tutorial-augment/temp.tutorial-augment/wikidata.sqlite3.db -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/all.tsv.gz\" --as all  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/labels.en.tsv.gz\" --as label  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/aliases.en.tsv.gz\" --as alias  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/descriptions.en.tsv.gz\" --as description  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/claims.external-id.tsv.gz\" --as external_id  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/claims.monolingualtext.tsv.gz\" --as monolingualtext  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/claims.quantity.tsv.gz\" --as quantity  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/claims.string.tsv.gz\" --as string  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/claims.time.tsv.gz\" --as time  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/claims.wikibase-item.tsv.gz\" --as item  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/claims.wikibase-property.tsv.gz\" --as wikibase_property  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/qualifiers.tsv.gz\" --as qualifiers  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/metadata.property.datatypes.tsv.gz\" --as datatypes  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/derived.P279.tsv.gz\" --as p279  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/derived.P279star.tsv.gz\" --as p279star  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/derived.P31.tsv.gz\" --as p31  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/metadata.in_degree.tsv.gz\" --as in_degree  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/metadata.out_degree.tsv.gz\" --as out_degree  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/metadata.pagerank.directed.tsv.gz\" --as pagerank_directed  -i \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled/metadata.pagerank.undirected.tsv.gz\" --as pagerank_undirected  --limit 3\n",
+      "kgtk query --graph-cache /tmp/projects/tutorial-augment/temp.tutorial-augment/wikidata.sqlite3.db -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/all.tsv.gz\" --as all  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/labels.en.tsv.gz\" --as label  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/aliases.en.tsv.gz\" --as alias  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/descriptions.en.tsv.gz\" --as description  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/claims.external-id.tsv.gz\" --as external_id  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/claims.monolingualtext.tsv.gz\" --as monolingualtext  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/claims.quantity.tsv.gz\" --as quantity  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/claims.string.tsv.gz\" --as string  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/claims.time.tsv.gz\" --as time  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/claims.wikibase-item.tsv.gz\" --as item  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/claims.wikibase-property.tsv.gz\" --as wikibase_property  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/qualifiers.tsv.gz\" --as qualifiers  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/metadata.property.datatypes.tsv.gz\" --as datatypes  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/derived.P279.tsv.gz\" --as p279  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/derived.P279star.tsv.gz\" --as p279star  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/derived.P31.tsv.gz\" --as p31  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/metadata.in_degree.tsv.gz\" --as in_degree  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/metadata.out_degree.tsv.gz\" --as out_degree  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/metadata.pagerank.directed.tsv.gz\" --as pagerank_directed  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/metadata.pagerank.undirected.tsv.gz\" --as pagerank_undirected  --limit 3\n",
       "node1\tlabel\tnode2\tid\tnode2;wikidatatype\n",
       "P10\talias\t'gif'@en\tP10-alias-en-282226-0\t\n",
       "P10\talias\t'animation'@en\tP10-alias-en-2f86d8-0\t\n",
       "P10\talias\t'media'@en\tP10-alias-en-c1427e-0\t\n",
-      "CPU times: user 5.38 ms, sys: 9.3 ms, total: 14.7 ms\n",
-      "Wall time: 704 ms\n"
+      "CPU times: user 6.81 ms, sys: 8.67 ms, total: 15.5 ms\n",
+      "Wall time: 40.8 s\n"
      ]
     }
    ],
@@ -297,7 +302,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/pedroszekely/opt/anaconda3/envs/kgtk/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3444: DtypeWarning: Columns (3) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3444: DtypeWarning: Columns (3) have mixed types.Specify dtype option on import or set low_memory=False.\n",
       "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
      ]
     },
@@ -1210,8 +1215,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 12.4 s, sys: 2.97 s, total: 15.3 s\n",
-      "Wall time: 15.2 s\n"
+      "CPU times: user 10.6 s, sys: 3.12 s, total: 13.7 s\n",
+      "Wall time: 14.5 s\n"
      ]
     },
     {
@@ -1357,8 +1362,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.55 s, sys: 340 ms, total: 2.89 s\n",
-      "Wall time: 19.5 s\n"
+      "CPU times: user 2.13 s, sys: 341 ms, total: 2.47 s\n",
+      "Wall time: 17.1 s\n"
      ]
     },
     {
@@ -2054,8 +2059,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 11.6 ms, sys: 18.8 ms, total: 30.5 ms\n",
-      "Wall time: 1.09 s\n"
+      "CPU times: user 10.6 ms, sys: 21.6 ms, total: 32.2 ms\n",
+      "Wall time: 2.11 s\n"
      ]
     },
     {
@@ -3888,9 +3893,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kgtk",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "kgtk"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
