--- a/use-cases/properties-for-this-type.ipynb
+++ b/use-cases/properties-for-this-type.ipynb
@@ -21,8 +21,8 @@
     "- `P31x`, a generalization of `instance of: P31`, sotred in `derived.P31x.tsv`\n",
     "- `Pinstance_count`, counts the number of `P31/P31x` instances of a class, in `statistics.Pinstance_count.tsv.gz`\n",
     "- `Pinstance_count_star`, same as `Pinstance_count`, but includes instances of the subclasses, in `statistics.Pinstance_count.star.tsv.gz`\n",
-    "- `P1963computed` in `derived.class.P1963computed.tsv.gz`\n",
-    "- `P1963computed_star` in `derived.P1963computed.star.tsv.gz`\n",
+    "- `P1963computed` in `derived.class.P1963computed.count.tsv.gz`\n",
+    "- `P1963computed_star` in `derived.P1963computed.count.star.tsv.gz`\n",
     "- `Pproperty_domain` in `derived.Pproperty_domain.tsv.gz`\n",
     "\n",
     "### `derived.P31x.tsv` contains the union of `P31` and `P31x`:\n",
