--- a/tutorial/03-kg-graph-embeddings.ipynb
+++ b/tutorial/03-kg-graph-embeddings.ipynb
@@ -28,12 +28,8 @@
    "source": [
     "# Parameters\n",
     "\n",
-    "current_path = os.getcwd()\n",
-    "\n",
-    "tutorial_deployment_path = current_path[0:len(current_path)-9] + '/datasets'\n",
-    "\n",
     "# Folder on local machine where to create the output and temporary folders\n",
-    "input_path = tutorial_deployment_path + '/arnold-profiled'\n",
+    "input_path = None\n",
     "# input_path = \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled\"\n",
     "\n",
     "output_path = \"/tmp/projects\"\n",
