--- a/use-cases/class-visualization.ipynb
+++ b/use-cases/class-visualization.ipynb
@@ -3904,7 +3904,7 @@
    "outputs": [],
    "source": [
     "kgtk(\"\"\"\n",
-    "    head -i class-visualization.edge.superclass.tsv.gz\n",
+    "    head -i $OUT/class-visualization.edge.superclass.tsv.gz\n",
     "\"\"\")"
    ]
   },
@@ -3930,7 +3930,7 @@
    "outputs": [],
    "source": [
     "kgtk(\"\"\"\n",
-    "    query -i class-visualization-test4/class-visualization.edge.tsv.gz\n",
+    "    query -i $OUT/class-visualization.edge.tsv.gz\n",
     "    --match 'edge:()-[label{edge_type:t}]->()'\n",
     "    --where 't = \"subclass\"'\n",
     "    -o $OUT/class-visualization.edge.subclass.tsv.gz\n",
@@ -3944,7 +3944,7 @@
    "outputs": [],
    "source": [
     "kgtk(\"\"\"\n",
-    "    query -i class-visualization-test4/class-visualization.edge.tsv\n",
+    "    query -i $OUT/class-visualization.edge.tsv.gz\n",
     "    --match 'edge:()-[label{edge_type:t}]->()'\n",
     "    --where 't = \"superclass\"'\n",
     "    -o $OUT/class-visualization.edge.superclass.tsv.gz\n",
