clean imports, fix code to download files

--- a/tutorial/03-kg-graph-embeddings.ipynb
+++ b/tutorial/03-kg-graph-embeddings.ipynb
@@ -2,7 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
+   "id": "f6d3ed7d-00de-4520-b7f5-2719cb5aa18a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting gensim\n",
+      "  Downloading gensim-4.1.2-cp39-cp39-macosx_10_9_x86_64.whl (24.0 MB)\n",
+      "\u001b[K     |████████████████████████████████| 24.0 MB 3.9 MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: numpy>=1.17.0 in /Users/amandeep/anaconda3/envs/kgtk-env/lib/python3.9/site-packages (from gensim) (1.21.3)\n",
+      "Collecting smart-open>=1.8.1\n",
+      "  Using cached smart_open-5.2.1-py3-none-any.whl (58 kB)\n",
+      "Requirement already satisfied: scipy>=0.18.1 in /Users/amandeep/anaconda3/envs/kgtk-env/lib/python3.9/site-packages (from gensim) (1.7.1)\n",
+      "Installing collected packages: smart-open, gensim\n",
+      "Successfully installed gensim-4.1.2 smart-open-5.2.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install gensim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "stuffed-forge",
    "metadata": {},
    "outputs": [],
@@ -12,8 +38,6 @@
     "from kgtk.functions import kgtk, kypher\n",
     "from gensim.models import KeyedVectors\n",
     "import tempfile\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
     "import h5py, torch\n",
     "from torchbiggraph.model import ComplexDiagonalDynamicOperator, DotComparator, CosComparator\n",
     "import json"
@@ -21,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "valued-space",
    "metadata": {},
    "outputs": [],
@@ -30,31 +54,16 @@
     "\n",
     "# Folder on local machine where to create the output and temporary folders\n",
     "input_path = None\n",
-    "# input_path = \"/Users/pedroszekely/Documents/GitHub/kgtk-tutorial-files/datasets/arnold-profiled\"\n",
-    "\n",
     "output_path = \"/tmp/projects\"\n",
-    "# output_path = \"/Users/pedroszekely/Downloads/kypher/projects\"\n",
-    "\n",
     "project_name = \"tutorial-graph-embeddings\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "dramatic-marker",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "User home: /Users/grantxie\n",
-      "Current dir: /Users/grantxie/Downloads/kgtk-notebooks/tutorial\n",
-      "KGTK dir: /Users/grantxie/Downloads/kgtk-notebooks\n",
-      "Use-cases dir: /Users/grantxie/Downloads/kgtk-notebooks/use-cases\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "files = [\n",
     "    \"all\",\n",
@@ -66,10 +75,16 @@
     "    \"p31\",\n",
     "    \"p279star\"\n",
     "]\n",
-    "ck = ConfigureKGTK(files)\n",
+    "additional_files = {\n",
+    "    'p31x': 'derived.P31x.tsv'\n",
+    "}\n",
+    "ck = ConfigureKGTK(files,\n",
+    "                  input_files_url=input_files_url)\n",
+    "input_files_url = \"https://github.com/usc-isi-i2/kgtk-tutorial-files/raw/main/datasets/arnold-profiled\"\n",
     "ck.configure_kgtk(input_graph_path=input_path,\n",
     "                  output_path=output_path,\n",
-    "                  project_name=project_name)"
+    "                  project_name=project_name,\n",
+    "                 additional_files=additional_files)"
    ]
   },
   {
@@ -82,25 +97,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TEMP: /tmp/projects/tutorial-graph-embeddings/temp.tutorial-graph-embeddings\n",
-      "GRAPH: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled\n",
-      "kgtk: kgtk\n",
-      "STORE: /tmp/projects/tutorial-graph-embeddings/temp.tutorial-graph-embeddings/wikidata.sqlite3.db\n",
-      "EXAMPLES_DIR: /Users/grantxie/Downloads/kgtk-notebooks/examples\n",
-      "OUT: /tmp/projects/tutorial-graph-embeddings\n",
-      "KGTK_LABEL_FILE: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/labels.en.tsv.gz\n",
-      "USE_CASES_DIR: /Users/grantxie/Downloads/kgtk-notebooks/use-cases\n",
-      "KGTK_OPTION_DEBUG: false\n",
-      "KGTK_GRAPH_CACHE: /tmp/projects/tutorial-graph-embeddings/temp.tutorial-graph-embeddings/wikidata.sqlite3.db\n",
       "kypher: kgtk query --graph-cache /tmp/projects/tutorial-graph-embeddings/temp.tutorial-graph-embeddings/wikidata.sqlite3.db\n",
-      "all: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/all.tsv.gz\n",
-      "label: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/labels.en.tsv.gz\n",
-      "alias: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/aliases.en.tsv.gz\n",
-      "description: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/descriptions.en.tsv.gz\n",
-      "item: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/claims.wikibase-item.tsv.gz\n",
-      "qualifiers: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/qualifiers.tsv.gz\n",
-      "p31: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/derived.P31.tsv.gz\n",
-      "p279star: /Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/derived.P279star.tsv.gz\n"
+      "kgtk: kgtk\n",
+      "GRAPH: /Users/amandeep/isi-kgtk-tutorial/input\n",
+      "KGTK_GRAPH_CACHE: /tmp/projects/tutorial-graph-embeddings/temp.tutorial-graph-embeddings/wikidata.sqlite3.db\n",
+      "KGTK_OPTION_DEBUG: false\n",
+      "USE_CASES_DIR: /Users/amandeep/Github/kgtk-notebooks/use-cases\n",
+      "TEMP: /tmp/projects/tutorial-graph-embeddings/temp.tutorial-graph-embeddings\n",
+      "STORE: /tmp/projects/tutorial-graph-embeddings/temp.tutorial-graph-embeddings/wikidata.sqlite3.db\n",
+      "EXAMPLES_DIR: /Users/amandeep/Github/kgtk-notebooks/examples\n",
+      "OUT: /tmp/projects/tutorial-graph-embeddings\n",
+      "KGTK_LABEL_FILE: /Users/amandeep/isi-kgtk-tutorial/input/labels.en.tsv.gz\n",
+      "all: /Users/amandeep/isi-kgtk-tutorial/input/all.tsv.gz\n",
+      "label: /Users/amandeep/isi-kgtk-tutorial/input/labels.en.tsv.gz\n",
+      "alias: /Users/amandeep/isi-kgtk-tutorial/input/aliases.en.tsv.gz\n",
+      "description: /Users/amandeep/isi-kgtk-tutorial/input/descriptions.en.tsv.gz\n",
+      "item: /Users/amandeep/isi-kgtk-tutorial/input/claims.wikibase-item.tsv.gz\n",
+      "qualifiers: /Users/amandeep/isi-kgtk-tutorial/input/qualifiers.tsv.gz\n",
+      "p31: /Users/amandeep/isi-kgtk-tutorial/input/derived.P31.tsv.gz\n",
+      "p279star: /Users/amandeep/isi-kgtk-tutorial/input/derived.P279star.tsv.gz\n",
+      "p31x: /Users/amandeep/isi-kgtk-tutorial/input/derived.P31x.tsv\n"
      ]
     }
    ],
@@ -118,7 +134,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kgtk query --graph-cache /tmp/projects/tutorial-graph-embeddings/temp.tutorial-graph-embeddings/wikidata.sqlite3.db -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/all.tsv.gz\" --as all  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/labels.en.tsv.gz\" --as label  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/aliases.en.tsv.gz\" --as alias  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/descriptions.en.tsv.gz\" --as description  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/claims.wikibase-item.tsv.gz\" --as item  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/qualifiers.tsv.gz\" --as qualifiers  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/derived.P31.tsv.gz\" --as p31  -i \"/Users/grantxie/Downloads/kgtk-notebooks/datasets/arnold-profiled/derived.P279star.tsv.gz\" --as p279star  --limit 3\n",
+      "kgtk query --graph-cache /tmp/projects/tutorial-graph-embeddings/temp.tutorial-graph-embeddings/wikidata.sqlite3.db -i \"/Users/amandeep/isi-kgtk-tutorial/input/all.tsv.gz\" --as all  -i \"/Users/amandeep/isi-kgtk-tutorial/input/labels.en.tsv.gz\" --as label  -i \"/Users/amandeep/isi-kgtk-tutorial/input/aliases.en.tsv.gz\" --as alias  -i \"/Users/amandeep/isi-kgtk-tutorial/input/descriptions.en.tsv.gz\" --as description  -i \"/Users/amandeep/isi-kgtk-tutorial/input/claims.wikibase-item.tsv.gz\" --as item  -i \"/Users/amandeep/isi-kgtk-tutorial/input/qualifiers.tsv.gz\" --as qualifiers  -i \"/Users/amandeep/isi-kgtk-tutorial/input/derived.P31.tsv.gz\" --as p31  -i \"/Users/amandeep/isi-kgtk-tutorial/input/derived.P279star.tsv.gz\" --as p279star  -i \"/Users/amandeep/isi-kgtk-tutorial/input/derived.P31x.tsv\" --as p31x  --limit 3\n",
       "node1\tlabel\tnode2\tid\tnode2;wikidatatype\n",
       "P10\talias\t'gif'@en\tP10-alias-en-282226-0\t\n",
       "P10\talias\t'animation'@en\tP10-alias-en-2f86d8-0\t\n",
@@ -205,29 +221,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "stone-monaco",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "In Processing, Please go to /tmp/projects/tutorial-graph-embeddings/temp.tutorial-graph-embeddings/ge.log.txt to check details\n",
-      "Processed Finished.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "kgtk(f\"\"\" graph-embeddings\n",
-    "            -op ComplEx \\\n",
-    "            --dimension $VECTOR_DIMENSION \\\n",
-    "            -ot kgtk \\\n",
-    "            --retain_temporary_data True \\\n",
-    "            -T $TEMP \\\n",
-    "            -i $GRAPH/claims.wikibase-item.augmented.tsv.gz \\\n",
-    "            -o {vector_output_path} \\\n",
+    "kgtk(f\"\"\" --debug graph-embeddings\n",
+    "            -op ComplEx \n",
+    "            --dimension $VECTOR_DIMENSION\n",
+    "            -ot kgtk\n",
+    "            --retain_temporary_data True\n",
+    "            -T $TEMP\n",
+    "            -w 1\n",
+    "            -i $GRAPH/claims.wikibase-item.augmented.tsv.gz\n",
+    "            -o {vector_output_path}\n",
     "            --log $TEMP/ge.log.txt\n",
     "    \"\"\")"
    ]
@@ -1949,9 +1956,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "kgtk-env",
    "language": "python",
-   "name": "python3"
+   "name": "kgtk-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1963,7 +1970,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
